# rust_eda

./: Cargo.toml  target
datasets/: EDA.ipynb  GlobalLandTemperaturesByCountry.parquet  Task2.parquet  Task5.parquet  Task7_2.parquet
src/: main.rs
src/expressions/: expressions.rs
src/io/: io.rs
src/transformations/: transformations.rs
